MAJ post (test post)

--- a/src/content/blog/kernelsubnext-lineageos/index.mdx
+++ b/src/content/blog/kernelsubnext-lineageos/index.mdx
@@ -5,7 +5,7 @@ date: 2025-08-04
 tags: ['android']
 image: './banner.png'
 authors: ['enscribe']
-draft: true
+draft: false
 ---
 
 import Callout from '@/components/Callout.astro'
