MAJ Callouts (reset pour résolution problème)

--- a/src/content/blog/kernelsubnext-lineageos/index.mdx
+++ b/src/content/blog/kernelsubnext-lineageos/index.mdx
@@ -1,10 +1,10 @@
 ---
 title: 'KernelSU Next & LineageOS (Redmi Note 10 Pro)'
 description: 'Installation de KernelSU Next pour LineageOS sur un Redmi Note 10 Pro'
-date: 2025-08-04
+date: 2025-08-10
 tags: ['android']
 image: './banner.png'
-authors: ['enscribe']
+authors: ['ttheglock']
 draft: false
 ---
 
