MAJ post (test post)

--- a/src/content/blog/kernelsubnext-lineageos/index.mdx
+++ b/src/content/blog/kernelsubnext-lineageos/index.mdx
@@ -9,9 +9,10 @@ draft: false
 ---
 
 import Callout from '@/components/Callout.astro'
+import { Icon } from 'astro-icon/components'
 
 ## KernelSU Next & LineageOS (Redmi Note 10 Pro)
 
-<Callout variant="avertissement">
+<Callout variant="note">
   Ce post est en cours de rédaction.
 </Callout>
