--- a/src/content/blog/mobile-nav-and-subposts/index.mdx
+++ b/src/content/blog/mobile-nav-and-subposts/index.mdx
@@ -5,7 +5,7 @@ date: 2025-05-21
 tags: ['v1.6.0']
 image: './banner.png'
 authors: ['enscribe']
-draft: false
+draft: true
 ---
 
 ## Two major improvements to the reading experience
