--- a/src/content/blog/mobile-nav-and-subposts/mobile-navigation.mdx
+++ b/src/content/blog/mobile-nav-and-subposts/mobile-navigation.mdx
@@ -4,6 +4,7 @@ description: 'Technical deep-dive into the sticky mobile table of contents with 
 date: 2025-05-21
 tags: ['v1.6.0']
 authors: ['enscribe']
+draft: true
 order: 1
 ---
 
