--- a/src/content/blog/mobile-nav-and-subposts/subposts.mdx
+++ b/src/content/blog/mobile-nav-and-subposts/subposts.mdx
@@ -4,6 +4,7 @@ description: 'How file-based hierarchical content organization works under the h
 date: 2025-05-21
 tags: ['v1.6.0']
 authors: ['enscribe']
+draft: true
 order: 2
 ---
 
